Fixed visibility mobile for max small-screen

--- a/assets/css/frontend-rtl.css
+++ b/assets/css/frontend-rtl.css
@@ -732,7 +732,7 @@
   .elementor-icon-box-wrapper .elementor-position-center {
     text-align: center; }
 
-@media (max-width: 479px) {
+@media (max-width: 767px) {
   body:not(.elementor-editor-active) .elementor-hidden-phone, body:not(.elementor-editor-active) .elementor-visible-tablet, body:not(.elementor-editor-active) .elementor-visible-desktop {
     display: none; } }
 @media (min-width: 480px) and (max-width: 1023px) {
